--- a/source/apps/games/templates/games/login.form.html
+++ b/source/apps/games/templates/games/login.form.html
@@ -1,4 +1,4 @@
-<form action="{% url 'login' %}" method="post">
+<form action="{% url 'accounts:login' %}" method="post">
   <legend>Login</legend>
 
   <div class="control-group">
