--- a/source/templates/base.html
+++ b/source/templates/base.html
@@ -21,10 +21,11 @@
       <li{% if request.path == '/' %} class="active"{% endif %}><a href="/">Home</a></li>
       {% if request.user.is_authenticated %}
         <li{% block confirm_active %}{% endblock %}><a href="{% url 'games:game_confirm' %}">Confirm Games</a></li>
-        <li{% block change_password_active %}{% endblock %}><a href="{% url 'password_change' %}">Change Password</a></li>
-        <li><a href="{% url 'logout' %}">Log Out</a></li>
+        <li{% block change_password_active %}{% endblock %}><a href="{% url 'accounts:password_change' %}">Change Password</a></li>
+        <li><a href="{% url 'accounts:logout' %}">Log Out</a></li>
       {% else %}
-        <li{% block login_active %}{% endblock %}><a href="{% url 'login' %}?next={{ request.path }}">Log In</a></li>
+        <li{% block reset_password_active %}{% endblock %}><a href="{% url 'accounts:password_reset' %}">Reset Password</a></li>
+        <li{% block login_active %}{% endblock %}><a href="{% url 'accounts:login' %}?next={{ request.path }}">Log In</a></li>
       {% endif %}
     </ul>
 
