--- a/source/apps/games/templates/games/index.html
+++ b/source/apps/games/templates/games/index.html
@@ -21,7 +21,7 @@
     <table class="table table-striped" id="rankings">
       <thead>
         <tr>
-          <th>#</th>
+          <th class="extra-thin-cell">#</th>
           <th>Name</th>
           <th>Wins</th>
           <th>Losses</th>
@@ -29,9 +29,9 @@
       </thead>
       <tbody>
         {% for user in rankings %}
-          <tr>
-            <td>{{ forloop.counter }}</td>
-            <td>{{ user.get_full_name }}</td>
+          <tr{% if user == request.user %} class="info"{% endif %}>
+            <td class="muted">{{ forloop.counter }}</td>
+            <td><strong>{{ user.get_full_name }}</strong></td>
             <td>{{ user.wins|confirmed_count }}</td>
             <td>{{ user.losses|confirmed_count }}</td>
           </tr>
