--- a/source/templates/base.html
+++ b/source/templates/base.html
@@ -43,5 +43,6 @@
   </div>
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+  {% block js %}{% endblock %}
 </body>
 </html>
