--- a/source/apps/games/templates/games/unconfirmed.html
+++ b/source/apps/games/templates/games/unconfirmed.html
@@ -1,1 +1,1 @@
- <span class="badge badge-important">{{ unconfirmed_count }}</span>
+{% if unconfirmed_count > 0 %} <span class="badge badge-important">{{ unconfirmed_count }}</span>{% endif %}
