Added bootstrap, and simpler nav

--- a/source/apps/games/templates/games/unconfirmed.html
+++ b/source/apps/games/templates/games/unconfirmed.html
@@ -1,1 +1,1 @@
-{% if unconfirmed_count > 0 %} <span class="badge badge-important">{{ unconfirmed_count }}</span>{% endif %}
+{% if unconfirmed_count > 0 %} <span class="badge badge-info">{{ unconfirmed_count }}</span>{% endif %}
