--- a/source/templates/base.html
+++ b/source/templates/base.html
@@ -1,4 +1,4 @@
-{% load compress gametags %}<!DOCTYPE html>
+{% load compress %}<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -17,23 +17,16 @@
   </header>
 
   <div class="container-fluid">
-    <ul class="nav nav-pills">
-      <li{% if request.path == '/' %} class="active"{% endif %}><a href="/">Home</a></li>
-      {% if request.user.is_authenticated %}
-        <li{% block confirm_active %}{% endblock %}><a href="{% url 'games:game_confirm' %}">Confirm Games{% unconfirmed_games request.user %}</a></li>
-        <li{% block change_password_active %}{% endblock %}><a href="{% url 'accounts:password_change' %}">Change Password</a></li>
-        <li><a href="{% url 'accounts:logout' %}">Log Out</a></li>
-      {% else %}
-        <li{% block reset_password_active %}{% endblock %}><a href="{% url 'accounts:password_reset' %}">Reset Password</a></li>
-        <li{% block login_active %}{% endblock %}><a href="{% url 'accounts:login' %}?next={{ request.path }}">Log In</a></li>
-      {% endif %}
-    </ul>
+    <ul class="nav nav-tabs">{% include "include/main-nav.html" with request=request only %}</ul>
 
     {% if messages %}
       <div class="row-fluid">
         <div class="span12">
           {% for message in messages %}
-            <div class="alert alert-{{ message.tags }}">{{ message|safe }}</div>
+            <div class="alert alert-{{ message.tags }} fade in">
+              <button type="button" class="close" data-dismiss="alert">&times;</button>
+              {{ message|safe }}
+            </div>
           {% endfor %}
         </div>
       </div>
@@ -43,6 +36,9 @@
   </div>
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+  {% compress js %}
+    <script src="{{ STATIC_URL }}js/lib/bootstrap.js"></script>
+  {% endcompress %}
   {% block js %}{% endblock %}
 </body>
 </html>
