--- a/source/templates/base.html
+++ b/source/templates/base.html
@@ -12,7 +12,8 @@
 <body>
   <header class="jumbotron">
     <div class="container-fluid">
-      <h1><i id="logo">Blenderbox</i>Ping Pong Leadboard</h1>
+      <h1><a href="/">Ping Pong Leadboard</a></h1>
+      <i id="logo">Blenderbox</i>
     </div>
   </header>
 
