--- a/source/templates/include/main-nav.html
+++ b/source/templates/include/main-nav.html
@@ -2,7 +2,7 @@
 
 {% load gametags utiltags %}
 
-<li{% active '/' %}><a href="/">Home</a></li>
+<li{% active '/' %}><a href="/"><i class="icon-home"></i></a></li>
 
 {% if request.user.is_authenticated %}
 
