--- a/source/templates/base.html
+++ b/source/templates/base.html
@@ -20,18 +20,11 @@
   <div class="container-fluid">
     <ul class="nav nav-tabs">{% include "include/main-nav.html" with request=request only %}</ul>
 
-    {% if messages %}
       <div class="row-fluid">
-        <div class="span12">
-          {% for message in messages %}
-            <div class="alert alert-{{ message.tags }} fade in">
-              <button type="button" class="close" data-dismiss="alert">&times;</button>
-              {{ message|safe }}
-            </div>
-          {% endfor %}
+        <div class="span12" id="messages">
+          {% include "include/messages.html" with messages=messages only %}
         </div>
       </div>
-    {% endif %}
 
     {% block content %}{% endblock %}
   </div>
