--- a/source/templates/base.html
+++ b/source/templates/base.html
@@ -12,8 +12,7 @@
 <body>
   <header class="jumbotron">
     <div class="container-fluid">
-      <h1><a href="/">Ping Pong Leadboard</a></h1>
-      <i id="logo">Blenderbox</i>
+      <h1><i id="logo">Blenderbox</i><a href="/">Ping Pong Leadboard</a></h1>
     </div>
   </header>
 
